Added initial stub for Action annotations.
Also added refinements for other annotations with the
SingleMethodAnnotationProcessor abstract base class.

Signed-off-by: Jay Jay Billings <jayjaybillings@gmail.com>